make test time cards align correctly

--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -88,3 +88,10 @@ button:hover {
     width: 75%;
     height: auto;
 }
+
+.test-card-container {
+    display:flex;
+    align-items:flex-start;
+    justify-content: flex-start;
+    align-content: flex-start;
+}
