--- a/frontend/src/assets/css/testCard.css
+++ b/frontend/src/assets/css/testCard.css
@@ -1,7 +1,7 @@
 /* Test Card Styles */
 
 .test-card-container {
-    display:inline-flexbox;
+    display: flex;
     justify-content: space-evenly;
     align-items: center;
     grid-area: card;
@@ -13,7 +13,7 @@
 .test-card {
     background-color: var(--White);
     width: 35%;
-    max-width: 300px;
+    max-width: 275px;
     min-width: 250px;
     height: 40%;
     max-height: 100px;
@@ -27,17 +27,12 @@
     margin: 15px;
 }
 
-.test-card-logo {
-    height: 150px;
-    width: auto;
-}
-
 .test-card-btn {
-    /*width: 300px;
-    height: 50px;*/
     display:inline;
     background-color: var(--White);
     font-weight: 700;
+    margin: 30px;
+    font-size: 120%;
 }
 
 .test-card-btn:hover {
